--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,172 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: "Poppins",-apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #EDF0F6;
+  color: #2C2C2E;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+}
+#root{
+  display: flex;
+  justify-content: center;
+}
+.App{
+  width: 60%;
+  padding: 20px;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+.header{
+  text-align: center;
+  font-size: 24px;
+  padding: 10px 0 20px 0;
+  flex: 0;
+  background-color: #EDF0F6;
+}
+.message-box{
+  background-color: #EDF0F6;
+  flex: 1;
+  overflow-y: scroll;
+}
+/* width */
+.message-box::-webkit-scrollbar {
+  width: 8px;
+  
+}
+
+/* Track */
+.message-box::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+/* Handle */
+.message-box::-webkit-scrollbar-thumb {
+  background: rgb(122, 122, 122);
+  border-radius: 20px;
+}
+
+/* Handle on hover */
+.message-box::-webkit-scrollbar-thumb:hover {
+  background: #58585c;
+}
+.input-box{
+  padding: 10px 20px;
+  flex: 0;
+  background-color: #FFF;
+  border-radius: 10px;
+  margin-bottom: 10px;
+  margin: 10px auto;
+  width: 100%;
+  box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
+}
+.input-form{
+  display: flex;
+  align-items: center;
+}
+.timeout{
+  flex: 1;
+  font-size: 18px;
+  padding: 8px 16px;
+  padding-right: 20px;
+}
+.message-input{
+  flex: 1;
+  font-family: "Poppins",sans-serif;
+  outline: 0;
+  border: none;
+  background-color: transparent;
+  color: #2C2C2E;
+  font-size: 18px;
+  padding: 8px 16px;
+  padding-right: 20px;
+}
+.message-btn{
+  flex: 0;
+  outline: 0;
+  border: none;
+  background-color: transparent;
+  
+}
+.message-btn svg{
+  width: 30px;
+  height: 30px;
+  color: #5884c1;
+  cursor: pointer;
+}
+.message-con{
+  margin-bottom: 10px;
+  display: flex;
+  align-items: flex-start;
+}
+.msg-img img{
+  width: 40px;
+  height: 40px;
+  object-fit: cover;
+  border-radius: 12px;
+}
+.msg-img{
+  margin-top: 8px;
+  flex: 0;
+}
+.msg-detail{
+  flex: 1;
+  margin-left: 16px;
+}
+.message{
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
+  background-color: #fff;
+  padding: 8px 12px;
+  padding-right: 16px;
+  border-radius:5px 20px 20px 15px;
+  width: fit-content;
+  max-width: 90%;
+  color: #2C2C2E;
+}
+.username{
+  font-size: 18px;
+  font-weight: 500;
+}
+.username-con{
+  margin-top: 8px;
+  margin-bottom: 4px;
+  margin-left: 2px;
+  display: flex;
+  align-items: center;
+}
+.message-user{
+  margin-left: auto;
+  text-align: right;
+  margin-right: 10px;
+}
+.date{
+  margin-left: 12px;
+  font-size: 13px;
+  font-weight: 500;
+  color: #565656;
+}
+.message-user .message{
+  background-color: #5884c1;
+  color: rgb(246, 246, 246);
+  margin-left: auto;
+  text-align: left;
+  border-radius: 20px 5px 15px 20px;
+  padding-right: 12px;
+  padding-left: 16px;
+}
+.message-user .username{
+  display: none;
 }
